Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71070

Printing to PDF/A format is not working in static builds

XMLWordPrintable

      Can be reproduced with static build and attached example. It complains:

      QIODevice::read (QFile, ":/qpdf/qpdfa_metadata.xml"): device not open
      QString::arg: 4 argument(s) missing in 
      QIODevice::read (QFile, ":/qpdf/sRGB2014.icc"): device not open
      

      It is missing Q_INIT_RESOURCE(qpdf) call in Qt Gui.

        1. qtbug71070.tar.gz
          0.5 kB
          Joni Poikelin
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes